[gd_scene load_steps=8 format=1]

[ext_resource path="res://GUI/theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/gameover_dialog.gd" type="Script" id=2]
[ext_resource path="res://GUI/retry_normal.png" type="Texture" id=3]
[ext_resource path="res://GUI/retry_pressed.png" type="Texture" id=4]
[ext_resource path="res://GUI/exit_normal.png" type="Texture" id=5]
[ext_resource path="res://GUI/exit_pressed.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "appear"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 2.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[node name="gameover_dialog" type="PopupDialog"]

visibility/visible = false
visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 307.0
margin/top = 280.0
margin/right = -326.0
margin/bottom = -277.0
popup/exclusive = true
script/script = ExtResource( 2 )

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 117.0
margin/top = 14.0
margin/right = 500.0
margin/bottom = 100.0
text = "Game over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 60.0
margin/top = 136.0
margin/right = 338.0
margin/bottom = 222.0
text = "Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 409.0
margin/top = 136.0
margin/right = 578.0
margin/bottom = 222.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="best_score_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 60.0
margin/top = 206.0
margin/right = 394.0
margin/bottom = 292.0
text = "Best score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="best_score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 413.0
margin/top = 206.0
margin/right = 578.0
margin/bottom = 292.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="retry" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 291.0
margin/right = 416.0
margin/bottom = 482.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="quit" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 119.0
margin/top = 320.0
margin/right = 265.4
margin/bottom = 474.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/appear = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="about_to_show" from="." to="." method="_on_dead_dialog_about_to_show"]

[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


